<resources>
    <string name="app_name">Lala Log</string>
    <string name="title_record_detail">Record Detail</string>
    <string name="search_title">search</string>
    <string name="save">save</string>
    <string name="subjects">Alumnos</string>
    <string name="records">Registros</string>
    <string name="record_text">Registro</string>
    <string name="new_record">Nuevo Registro</string>
    <string name="name">Nombre</string>
    <string name="lastname1">Apellido Paterno</string>
    <string name="lastname2">Apellido Materno</string>
    <string name="unique_id">Matricula</string>
    <string name="write_new_record">Escriba nuevo registro...</string>
    <string name="default_birthdate_text">DD-MM-AAAA</string>
    <string name="group_1">A</string>
    <string name="group_2">B</string>
    <string name="group_3">C</string>
    <string name="year">Año</string>
    <string name="january">Enero</string>
    <string name="february">Febrero</string>
    <string name="march">Marzo</string>
    <string name="april">Abril</string>
    <string name="may">Mayo</string>
    <string name="june">Junio</string>
    <string name="july">Julio</string>
    <string name="august">Agosto</string>
    <string name="september">Septiembre</string>
    <string name="october">Octubre</string>
    <string name="november">Noviembre</string>
    <string name="december">Diciembre</string>
    <string name="editor_record_failed">Error al grabar registro</string>
    <string name="editor_record_success">Registro grabado</string>
    <string name="editor_subject_failed">Error al guardar alumno</string>
    <string name="editor_subject_success">Alumno guardado</string>
    <string name="unknown_date">00 / 00 / 00</string>
    <string name="unknown_time">00 hrs</string>
    <string name="history">Historial de Ediciones</string>
    <string name="title_record_history">Historial de Ediciones</string>
    <string name="detail_update_record_failed">Error al actualizar informacion.</string>
    <string name="detail_update_record_successfull">Informacion actualizada.</string>

    <string name="title_subjects">Alumnos</string>
    <string name="unique_id_label">Matricula:  </string>
    <string name="record_list_title">Registros</string>
    <string name="title_subject">Alumno</string>
    <string name="add_subject">Agregar Sujeto</string>

    <string name="title_new_subject">Agregar alumno</string>
    <string name="title_edit_subject">Editar Alumno</string>
    <string name="existing_subject">Matricula ya existente.</string>
    <string name="unsaved_changes_dialog_msg">¿Desea salir sin guardar cambios?</string>
    <string name="discard">Salir</string>
    <string name="keep_editing">Continuar</string>
    <string name="search_results">Resultado de la Búsqueda</string>
    <string name="record_search_hint">Buscar matrícula o nombre de alumno</string>
    <string name="loader_message">cargando registros...</string>
    <string name="delete_subject_failed">Error al borrar alumno</string>
    <string name="delete_subject_succes">Alumno eliminado</string>
    <string name="delete_record_failed">Error al borrar registro</string>
    <string name="delete_record_succes">Registro eliminado</string>
    <string name="delete_record_dialog_msg">¿Esta seguro que desea borrar el registro?</string>
    <string name="delete_subject_dialog_msg">¿Esta seguro que desea borrar el alumno?</string>
    <string name="accept">aceptar</string>
    <string name="cancel">cancelar</string>
    <string name="delete_record">Borrar registro</string>
    <string name="delete_subject">Borrar alumno</string>
    <string name="no_changes_made">Sin cambios</string>
</resources>
