<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mars_skyrunner.lalalog.RecordDetailFragment">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardview_margin_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_unique_id" />


            <TextView
                android:id="@+id/subject_unique_id"
                style="@style/PrimaryText"
                android:layout_gravity="center_vertical"
                android:text="0000"
                android:textAppearance="?attr/textAppearanceListItem" />

            <!-- school unique id field -->
            <AutoCompleteTextView
                android:id="@+id/unique_id_auto"
                android:visibility="visible"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/fab_margin"
                android:hint="@string/unique_id" />

        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardview_margin_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/subject_name"
                style="@style/PrimaryText"
                android:layout_gravity="center_vertical"
                android:text="0000"
                android:textAppearance="?attr/textAppearanceListItem" />

            <EditText
                android:id="@+id/name_edittext"
                android:visibility="visible"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/fab_margin"
                android:hint="@string/name" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:visibility="visible"
        android:id="@+id/lastname1_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardview_margin_top">

        <EditText
            android:id="@+id/lastname1_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/no_icon_margin_left"
            android:layout_marginRight="@dimen/fab_margin"
            android:hint="@string/lastname1"
            android:singleLine="true"
            android:maxLines="1" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:visibility="visible"
        android:id="@+id/lastname2_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardview_margin_top">

        <EditText
            android:id="@+id/lastname2_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/no_icon_margin_left"
            android:layout_marginRight="@dimen/fab_margin"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/lastname2" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardview_margin_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/fab_margin"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_group" />

            <TextView
                android:id="@+id/subject_group"
                style="@style/PrimaryText"
                android:layout_gravity="center_vertical"
                android:text="A"
                android:textAppearance="?attr/textAppearanceListItem" />

            <Spinner
                android:id="@+id/group_spinner"
                android:layout_margin="@dimen/list_item_margin_top"
                android:padding="@dimen/list_item_margin_top"
                style="@style/GroupSpinner"></Spinner>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardview_margin_top">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/fab_margin"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_cake" />

            <TextView
                android:id="@+id/subject_birthdate"
                style="@style/PrimaryText"
                android:layout_gravity="center_vertical"
                android:text="DD-MM-AAAA"
                android:textAppearance="?attr/textAppearanceListItem" />


            <Spinner
                android:id="@+id/birthdate_month_spinner"
                android:layout_margin="@dimen/list_item_margin_top"
                android:padding="@dimen/list_item_margin_top"
                style="@style/GroupSpinner"></Spinner>

            <Spinner
                android:id="@+id/birthdate_day_spinner"
                android:layout_margin="@dimen/list_item_margin_top"
                android:padding="@dimen/list_item_margin_top"
                style="@style/GroupSpinner"></Spinner>


            <Spinner
                android:id="@+id/birthdate_year_spinner"
                android:layout_margin="@dimen/list_item_margin_top"
                android:padding="@dimen/list_item_margin_top"
                style="@style/GroupSpinner"></Spinner>


        </LinearLayout>



    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/cardview_margin_top"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/record_detail"
                android:padding="@dimen/fab_margin"
                style="@style/PrimaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:hint="@string/record_text"
                android:textIsSelectable="true" />

            <EditText
                android:id="@+id/record_edittext"
                android:visibility="gone"
                android:padding="@dimen/fab_margin"
                android:layout_margin="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/primary_text_size"
                android:fontFamily="sans-serif"
                android:hint="@string/write_new_record" />

            <RelativeLayout
                android:padding="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            <TextView
                android:id="@+id/record_date"
                android:text="00/00/0000"
                android:layout_alignParentLeft="true"
                style="@style/SecondaryText"
                android:alpha="0.5"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/record_time"
                android:text="00 hrs"
                android:layout_alignParentRight="true"
                style="@style/SecondaryText"
                android:alpha="0.5"
                android:textAppearance="?attr/textAppearanceListItem" />

            </RelativeLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>
